# kapla6

./: .eslintrc  .gitignore  .pnp.cjs  package-lock.json  package.json
.yarn/plugins/@yarnpkg/: plugin-interactive-tools.cjs
src/: App.js  AppInitiator.jsx  AppTest.js  index.html  index.js  indexTest.js  main.js  main.jsx  styles.css
src-tauri/: .env  .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: App.js  App.jsx  Errors.js  Errors.jsx  FilterFieldsLayout.jsx  GeschaefteLayout.js  GeschaefteLayout.jsx  ModalGeschaeftDelete.jsx  ModalMessage.jsx  PagesModal.jsx  PagesSuperSimple.js  TableLayout.jsx
src/components/FilterFields/: AreaFristen.jsx  AreaGeschaeft.jsx  AreaHistory.jsx  (+11 more)
src/src/: changeDbConnection.js  chooseDb.js  chooseDbConnection.js  chooseDbPath.js  convertDateToDdMmYyyy.js  convertDateToYyyyMmDd.js  createOptions.js  existsFile.js  exportGeschaefte.js  fetchInitialData.js  fetchUsername.js  filterCriteriaToArrayOfStrings.js  filterForFaelligeGeschaefte.js  filterForVernehmlAngek.js  filterForVernehmlLaeuft.js  filterGeschaefte.js  filterGeschaefteByFilterFields.js  geschaefteKontakteExternStandardState.js  geschaefteKontakteInternStandardState.js  geschaefteSortByFieldsGetSortFields.js  getAllData.js  getConfig.js  getDateValidationStateDate.js  getDauerBisFristMitarbeiter.js  getDb.js  getDropdownOptions.js  getFristMitarbeiterWarnung.js  getGeschaefteFieldNames.js  getHistoryOfGeschaeft.js  getHistoryOfGeschaefte.js  getIdNachgeschaeft.js  getIdVorgeschaeft.js  getItKontoForVerantwortlich.js  getVornameNameForVerantwortlich.js  ifIsNumericAsNumber.js  initiate.js  isDateField.js  isNumeric.js  pageStandardState.js  pagesStandardState.js  (+13 more)
src/store/: Abteilung.js  Aktenstandort.js  App.js  Externe.js  FilterFields.js  Geko.js  Geschaeft.js  GeschaeftKontaktExtern.js  GeschaeftKontaktIntern.js  Geschaefte.js  GeschaefteKontakteExtern.js  GeschaefteKontakteIntern.js  Geschaeftsart.js  Interne.js  Links.js  Page.js  Pages.js  ParlVorstossTyp.js  RechtsmittelErledigung.js  RechtsmittelInstanz.js  SortFields.js  Status.js  Table.js  TableRows.js  index.js
(+103 files in other folders)
