[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = [ "you" ]
license = ""
repository = ""
default-run = "app"
edition = "2018"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.1.1", features = [] }

[dependencies]
serde_json = "1.0.87"
serde = { version = "1.0.147", features = [ "derive" ] }
tauri = { git = "https://github.com/tauri-apps/tauri", branch = "next", features = ["api-all"], version = "1.1.1" } 
tauri-plugin-sql = { git = "https://github.com/tauri-apps/tauri-plugin-sql", features = [ "sqlite" ] }
whoami = "1.2.3"
sqlx = { version = "0.6.2", features = [ "runtime-tokio-rustls", "sqlite" ] }
tokio = { version = "1.21.2", features = [ "full" ] }
async-std = "1.12.0"

[patch.crates-io]
tauri = { git = "https://github.com/tauri-apps/tauri", branch = "next" }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
